# EternityIIMasterThesis

./: .gitignore  CMakeLists.txt  README.md
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
src/: CMakeLists.txt  main.cpp  mainpage.hh
src/exception/: BoardValidationException.cpp  BoardValidationException.hh  GameException.cpp  GameException.hh  NonExistingPieceException.cpp  NonExistingPieceException.hh  OutOfBoardException.cpp  OutOfBoardException.hh  PieceOverlapException.cpp  PieceOverlapException.hh
src/game/board/: BoardGenerator.cpp  BoardGenerator.hh  DefaultScoreCalculator.cpp  DefaultScoreCalculator.hh  DynamicSizedBoard.cpp  DynamicSizedBoard.hh  FixedBoard4x4ForSquarePieces.cpp  FixedBoard4x4ForSquarePieces.hh  IBoard.hh  IPiece.hh  IScoreCalculator.hh  ScoreReport.hh  SholomonScoreCalculator.cpp  SholomonScoreCalculator.hh  SquarePiece.cpp  SquarePiece.hh
src/game/display/: IDisplay.hh  TextualDisplay.cpp  TextualDisplay.hh
src/solvers/: BacktrackingSolver.cpp  BacktrackingSolver.hh  GeneticAlgorithm.cpp  GeneticAlgorithm.hh  ISolver.hh  SholomonGeneticSolver.cpp  SholomonGeneticSolver.hh
src/utility/: Position2D.hh  Size2D.hh
unitTest/: BasicTest.cpp  BoardTest.cpp  CMakeLists.txt  PieceTest.cpp
